<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#CECECE"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".RegistroFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/registro_titulo"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/reg_nombre"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/registro_nombre"

            android:inputType="textPersonName"
            android:layout_margin="5dp"
            android:autofillHints="username"/>

        <EditText
            android:id="@+id/reg_apellido"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/registro_apellido"
            android:inputType="textPersonName"
            android:layout_margin="5dp"
            android:autofillHints="username"/>

    </LinearLayout>

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registro_correo"
        android:inputType="textEmailAddress"
        android:layout_margin="5dp"
        android:layout_marginTop="30dp"
        android:autofillHints="emailAddress"/>

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registro_contraseña"
        android:inputType="textPassword"
        android:layout_margin="5dp"
        android:layout_marginTop="30dp"
        android:autofillHints="password"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/registro_politica"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toTopOf="parent"/>


    <Button
        android:id="@+id/btn_crear_registrp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/gray_100"
        android:text="@string/registro_btn1"/>

    <Button
        android:id="@+id/cargar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/gray_100"
        android:text="cargar"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:gravity="bottom">

        <TextView
            android:id="@+id/reg_term_uso"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/registro_terminos_uso"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/reg_pol_privacidad"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/registro_politica_privacidad"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>