<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".InicioFragment"
    android:id="@+id/InicioFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="110dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/img_sesion" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/act1_texto_titulo"
            android:textColor="@color/gray_100"
            android:textSize="30sp"
            android:textAlignment="center"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act1_texto_sesion"
                android:textColor="@color/gray_100"
                android:textSize="20sp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/link_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act1_texto_cuenta"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textAlignment="textStart"
                android:layout_marginStart="5dp"
                android:textStyle="italic"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/act1_campo1"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@color/gray"
            android:hint="@string/act1_campo1"
            android:singleLine="true"
            android:textSize="20sp"
            android:paddingLeft="5dp"
            android:inputType="textPersonName"
            android:autofillHints="username"/>


        <EditText
            android:id="@+id/act1_campo2"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@color/gray"
            android:hint="@string/act1_campo2"
            android:singleLine="true"
            android:textSize="20sp"
            android:paddingLeft="5dp"
            android:inputType="textPassword"
            android:autofillHints="password"/>

        <Button
            android:id="@+id/act1_btn1"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/act1_texto_btn"
            android:textColor="@color/gray_100"

            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="______________ o ______________"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/act1_btn2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/act1_texto_btn2"
            android:textColor="@color/gray_100"

            android:textSize="15sp"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>